# Barbet

./: .gitignore  README.md  configuration_barbet.py  modeling_barbet.py  pyproject.toml
configs/barbet_1b/: config.json
configs/barbet_300m/: config.json
docs/: architecture.md  checkpoint_conversion.md  configuration.md  development.md  long_context.md  transformers_usage.md
scripts/: write_model_configs.py
src/barbet/: __init__.py  modeling_barbet.py
tests/: test_modeling_barbet.py
