[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barbet"
version = "0.1.0"
description = "Hugging Face Transformers modeling code for Barbet 300M and 1B causal language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "transformers>=4.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
